--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "firstNativeApp",
-    "slug": "firstNativeApp",
+    "name": "Simple-Todo",
+    "slug": "simple-todo",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/todo.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -23,10 +23,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.mohzys23.simpletodo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "A todo app to add todo and delete with keyboard close feature and flatlist scroll fixing",
+    "githubUrl": "https://github.com/mohzys23/Todo-Native.git"
   }
 }
